pos-print: add async receipt printing
